@startuml
title Diagrama de clases principal

' ===== PAQUETE INTERFAZ =====
package Interfaz {
  class InterfazTerminal {
    - estadoActual : EstadoInterfaz
    - scanner : Scanner
    - gestor : GestorEstaciones
    - filtroEstacion : FiltroEstacion
    - filtroDatos : FiltroDatos
    - maestro : Maestro
    - monoHilo : MonoHilo
    --
    + InterfazTerminal()
    + iniciar()
  }

  class Ventana {
    ' Clase reservada para futura GUI
  }
}

' ===== PAQUETE ESTACIONESDATOS =====
package EstacionesDatos {
  class Estacion {
    - id : String
    - estado : String
    - municipio : String
    - latitud : double
    - longitud : double
    - altitud : double
    - urlBase : String
    --
    + cumpleCriterios(...)
    + estaEnRangoLat(...)
    + estaEnRangoLong(...)
    + estaEnRangoAlt(...)
    + toString() : String
  }

  class GestorEstaciones {
    - estaciones : Estacion[]
    - listaFiltrada : ArrayList<Estacion>
    --
    + GestorEstaciones()
    + cargarDesdeXML(archivo : String)
    + filtrar(FiltroEstacion) : Estacion[]
    + getEstaciones() : Estacion[]
  }

  class AnalizadorEstacion {
    - estacion : Estacion
    - filtro : FiltroDatos
    - datos : ArrayList<RenglonDatos>
    --
    + AnalizadorEstacion(Estacion, FiltroDatos)
    + descargarDatos()
    + parsearCSV()
    + filtrarDatos() : RenglonDatos[]
  }

  class RenglonDatos {
    + VALOR_CENTINELA : String
    --
    + fecha : LocalDate
    + precipitacion : double
    + evaporacion : double
    + tempMax : double
    + tempMin : double
    --
    + cumpleFiltro(FiltroDatos) : boolean
  }

  class FiltroEstacion {
    + estados : String[]
    + municipios : String[]
    + latitudInf : double
    + latitudSup : double
    + longitudInf : double
    + longitudSup : double
    + altitudInf : double
    + altitudSup : double
    --
    + FiltroEstacion(...)
  }

  class FiltroDatos {
    + fechaIni : LocalDate
    + fechaFin : LocalDate
    + precipInf : double
    + precipSup : double
    + evapInf : double
    + evapSup : double
    + tempMaxInf : double
    + tempMaxSup : double
    + tempMinInf : double
    + tempMinSup : double
    --
    + FiltroDatos(...)
  }
}

' ===== PAQUETE HILOS.MONOHILO =====
package "Hilos.MonoHilo" {
  class MonoHilo extends Thread {
    - estaciones : Estacion[]
    - filtroDatos : FiltroDatos
    - corriendo : boolean
    - resultados : RenglonDatos[]
    --
    + MonoHilo(Estacion[], FiltroDatos)
    + run()
    + getResultados() : RenglonDatos[]
  }
}

' ===== PAQUETE HILOS.POLIHILO =====
package "Hilos.PoliHilo" {
  class Maestro extends Thread {
    - numProcesadores : int
    - acumuladorRenglones : ArrayList<RenglonDatos>
    - trabajadores : Trabajador[]
    - resultados : RenglonDatos[]
    - corriendo : boolean
    - contadorTiempo : long
    --
    + Maestro(Estacion[], FiltroDatos)
    + run()
    + getResultados() : RenglonDatos[]
  }

  class Trabajador extends Thread {
    - estaciones : Estacion[]
    - filtroDatos : FiltroDatos
    - renglonesLimpios : RenglonDatos[]
    - corriendo : boolean
    - fueLeido : boolean
    --
    + Trabajador(Estacion[], FiltroDatos)
    + run()
    + getRenglones() : RenglonDatos[]
  }
}

' ===== PAQUETE UTILS =====
package Utils {
  class Matematicas {
    {static} + valorEntreValores(val, v1, v2) : boolean
    {static} + fechaEntreFechas(fecha, ini, fin) : boolean
    {static} + parseDoubleSeguro(s : String) : double
    {static} + parseIntSeguro(s : String) : int
  }

  class LectorXML {
    - archivo : File
    --
    {static} + leerEstaciones(archivo : String) : Estacion[]
  }

  class Bitacora {
    - dirBitacoraA : String
    - dirBitacoraE : String
    --
    {static} + movimiento(String)
    {static} + error(String, Exception)
  }

  class EscritorDatos {
    - EscritorDatos()
    --
    {static} + escribir(RenglonDatos[], archivo : String)
  }
}

' ===== CLASE MAIN =====
class Main {
  + main(args : String[]) : void
}

' ===== RELACIONES =====

Main --> InterfazTerminal
Main --> Ventana

InterfazTerminal --> GestorEstaciones
InterfazTerminal --> FiltroEstacion
InterfazTerminal --> FiltroDatos
InterfazTerminal --> Maestro
InterfazTerminal --> MonoHilo
InterfazTerminal --> Matematicas

GestorEstaciones "1" *-- "many" Estacion
GestorEstaciones --> LectorXML
GestorEstaciones --> Bitacora

AnalizadorEstacion --> Estacion
AnalizadorEstacion --> FiltroDatos
AnalizadorEstacion --> RenglonDatos
AnalizadorEstacion --> Bitacora
AnalizadorEstacion --> LectorXML

RenglonDatos --> Matematicas
FiltroEstacion --> Estacion : define criterios para seleccionar
FiltroDatos --> RenglonDatos : define criterios para filtrar

Maestro "1" *-- "many" Trabajador
Maestro --> Estacion
Maestro --> FiltroDatos
Maestro --> RenglonDatos
Maestro --> Bitacora

Trabajador --> AnalizadorEstacion
Trabajador --> Estacion
Trabajador --> FiltroDatos
Trabajador --> RenglonDatos
Trabajador --> Bitacora

MonoHilo --> AnalizadorEstacion
MonoHilo --> Estacion
MonoHilo --> FiltroDatos
MonoHilo --> RenglonDatos
MonoHilo --> LectorXML

Matematicas ..> LocalDate
Bitacora ..> LocalDateTime

EscritorDatos --> RenglonDatos
EscritorDatos --> Bitacora

@enduml
